ghc-4335c07/testsuite/tests/roles/should_fail/Roles12.hs
module Roles12 where

import Roles12a

data T a
